refactor: StorageServiceImpl improved