@@ -9,7 +9,6 @@ import com.pedrofreires.SwiftConvert.config.storageProperties.StorageProperties;
 import com.pedrofreires.SwiftConvert.domain.storage.exceptions.StorageException;
 
 import java.io.IOException;
-import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -17,46 +16,36 @@ import java.nio.file.StandardCopyOption;
 
 
 @Service
-public class FilesystemStorageService implements StorageService {
+public class StorageServiceImpl implements StorageService {
 
     private final Path destinationFile;
 
     @Autowired
-    public FilesystemStorageService(StorageProperties properties){
-        this.destinationFile = Paths.get(properties.getLocation());
-        this.init();
-    }
+    public StorageServiceImpl(StorageProperties properties) throws IOException {
+        this.destinationFile = Path.of(properties.getLocation());
 
-    @Override
-    public void init() {
-        try {
-            Files.createDirectories(destinationFile);
-        }
-        catch (IOException e) {
-            throw new StorageException("Could not initialize storage", e);
+        if( !Files.exists(this.destinationFile.toAbsolutePath()) ) {
+            Files.createDirectory(this.destinationFile.toAbsolutePath());
         }
     }
 
     @Override
-    public String store(@NonNull MultipartFile file) {
+    public String store(@NonNull MultipartFile file){
+
         try {
             if (file.isEmpty()) {
                 throw new StorageException("Failed to store empty file.");
             }
 
-            // normalize to remove duplicate name
             Path destinationFile = this.destinationFile
                     .resolve( Paths.get(file.getOriginalFilename()))
                     .normalize().toAbsolutePath();
 
-            try (InputStream inputStream = file.getInputStream()) {
-                Files.copy(inputStream, destinationFile, StandardCopyOption.REPLACE_EXISTING);
-            }
+            Files.copy(file.getInputStream(), destinationFile, StandardCopyOption.REPLACE_EXISTING);
         }
         catch (IOException e) {
             throw new StorageException("Failed to store file.", e);
         }
-
         return destinationFile.toAbsolutePath().toString();
     }
 }
